--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,10 @@ nav {
     font-size: 13px;
 }
 
+nav li:hover {
+    text-decoration: underline;
+}
+
 #left-navigation {
     list-style: none;
     display: inline-flex;
@@ -29,6 +33,25 @@ nav {
     display: inline-flex;
     justify-content: end;
     align-items: center;
+}
+
+#right-navigation li {
+    color: #000;
+}
+
+#right-navigation li:hover {
+    color: rgba(0, 0, 0, 0.75);
+}
+
+#apps-gliph {
+    background-image: url('https://ssl.gstatic.com/gb/images/i1_1967ca6a.png');
+    background-size: 528px 68px;
+    width: 30px;
+    height: 30px;
+    box-sizing: border-box;
+    border-radius: 2px;
+    background-position: -132px -38px;
+    opacity: .55;
 }
 
 #sign-in {
