--- a/assets/main.css
+++ b/assets/main.css
@@ -6,12 +6,22 @@ a {
     text-decoration: none;
 }
 
+#top-spacer {
+    width: 100vw;
+    position: relative;
+    top:16px;
+}
+
 nav {
     background-color: transparent;
     position: relative;
+    display: flex;
     width: 100vw;
+    height: 55 px;
     color: rgba(0, 0, 0, 0.75);
     font-size: 13px;
+    flex-direction: row;
+    
 }
 
 nav li:hover {
@@ -22,6 +32,8 @@ nav li:hover {
     list-style: none;
     display: inline-flex;
     padding-left: 15px;
+    margin-right: 10px;
+    margin-top: 7px;
 }
 
 .nav-item {
@@ -31,8 +43,9 @@ nav li:hover {
 #right-navigation {
     list-style: none;
     display: inline-flex;
-    justify-content: end;
     align-items: center;
+    margin-left: auto;
+    padding-right: 15px;
 }
 
 #right-navigation li {
@@ -52,6 +65,11 @@ nav li:hover {
     border-radius: 2px;
     background-position: -132px -38px;
     opacity: .55;
+    margin-left: 5px;
+}
+
+#apps-gliph:hover {
+    opacity: .85;
 }
 
 #sign-in {
