--- a/assets/main.css
+++ b/assets/main.css
@@ -110,6 +110,57 @@ nav li:hover {
     flex-grow: inherit;
 }
 
+.search-container-inner {
+    flex: 1;
+    display: flex;
+    padding: 5px 8px 0 16px;
+    padding-left: 14px;
+}
+
+.sinput {
+
+}
+
+.search-input-text {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.87);
+    word-wrap: break-word;
+    outline: none;
+    display: flex;
+    flex: 100%;
+    margin-top: -37px;
+    font-size: 16px;
+}
+
+.search-container-img {
+    display: flex;
+    align-items: center;
+    padding-right: 13px;
+    margin-top: -2px;
+}
+
+.search-container-img-inner {
+    margin: auto;
+}
+
+.sconfig {
+    display: inline-block;
+    fill: currentColor;
+    line-height: 24px;
+    position: relative;
+}
+
+.search-gliph {
+    margin-top: 3px;
+    color: #9aa0a6;
+    height: 20px;
+    width: 20px;
+}
+
+
 .search-buttons {
     display: flex;
     flex-flow: row;
@@ -142,4 +193,13 @@ nav li:hover {
 
 #seach-bar {
   border: 0px solid transparent;
+}
+
+/* Footer */
+
+.tag-line {
+    display: flex;
+    justify-content: center;
+    font-size: small;
+    margin-top: 12px;
 }
