--- a/assets/main.css
+++ b/assets/main.css
@@ -98,7 +98,15 @@ nav li:hover {
 }
 
 .homepage-logo {
-    
+    height: 180px;
+    width: 450px;
+    display: inline-block;
+    position: relative;
+    justify-content: center;
+}
+
+.logo-img {
+  padding-top: 109px;
 }
 
 /* Search area */
