--- a/assets/main.css
+++ b/assets/main.css
@@ -37,6 +37,7 @@ nav li:hover {
     padding-left: 15px;
     margin-right: 10px;
     margin-top: 7px;
+    align-items: center;
 }
 
 .nav-item {
@@ -49,6 +50,7 @@ nav li:hover {
     align-items: center;
     margin-left: auto;
     padding-right: 15px;
+    margin-top: 7px;
 }
 
 #right-navigation li {
@@ -95,12 +97,15 @@ nav li:hover {
 .logo {
     height: 233px;
     margin-top: 89px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: -100px;
 }
 
 .homepage-logo {
     height: 180px;
     width: 450px;
-    display: inline-block;
+    display: flex;
     position: relative;
     justify-content: center;
 }
@@ -137,6 +142,7 @@ nav li:hover {
 
 .sinput {
     display: flex;
+    width: 88%;
 }
 
 .search-input-text {
@@ -149,7 +155,7 @@ nav li:hover {
     outline: none;
     display: flex;
     flex: 100%;
-    margin-top: 3px;
+    margin-top: -5px;
     font-size: 16px;
 }
 
